RUMM-3250: Fix removing final modifier for Java 17